--- a/Configs/.config/waybar/style.css
+++ b/Configs/.config/waybar/style.css
@@ -57,18 +57,20 @@
 #cpu,
 #memory,
 #network,
+#bluetooth,
+#battery,
 #pulseaudio,
 #custom-power {
     background-color: @base;
     border-radius: 8px;
     margin-top: 6px;
-    padding: 0px 3px;
+    padding: 3px 3px;
 }
 
 /* Custom logo */
 #custom-logo {
-    padding-right: 7px;
-    padding-left: 5px;
+    padding-right: 13px;
+    padding-left: 11px;
     font-size: 20px;
     margin-left: 12px;
     color: @sapphire;
@@ -85,7 +87,7 @@
     all: initial;
     min-width: 0;
     box-shadow: inset 0 -3px transparent;
-    padding: 0 18px;
+    padding: 0 14px;
     border: none;
     border-radius: 8px;
     background-color: @base;
@@ -144,23 +146,6 @@ tooltip label {
     font-size: 16px;
 }
 
-/* #tray button { */
-/*     margin: 0px; */
-/* } */
-/**/
-/* #tray > widget { */
-/*     padding: 0 0px; */
-/*     margin: 0; */
-/*     border-radius: 8px; */
-/*     background-color: @surface3; */
-/* } */
-
-/* #tray > widget:hover image { */
-/*     padding: 5px; */
-/*     border-radius: 8px; */
-/*     background-color: @surface3; */
-/* } */
-
 /* PC Management */
 #cpu {
     color: @red;
@@ -195,13 +180,52 @@ tooltip label {
     background-color: @surface3;
 }
 
+/* Bluetooth */
+#bluetooth {
+    color: @blue;
+    padding-left: 8px;
+    padding-right: 8px;
+    font-size: 16px;
+    border-radius: 0px;
+}
+
+#bluetooth:hover {
+    background-color: @surface3;
+}
+
+/* Battery */
+#battery {
+    font-size: 16px;
+    color: @yellow;
+    padding-left: 8px;
+    padding-right: 14px;
+    border-radius: 0px;
+}
+
+#battery:hover {
+    background-color: @surface3;
+}
+
 /* Pulseaudio */
-#pulseaudio {
+#pulseaudio.output {
     color: @lavander;
     font-size: 18px;
     padding-left: 8px;
     padding-right: 12px;
     border-radius: 0px;
+}
+
+#pulseaudio.input {
+    color: @lavander;
+    font-size: 18px;
+    padding-left: 6px;
+    padding-right: 12px;
+    margin-right: 5px;
+    border-radius: 0px 8px 8px 0px;
+}
+#pulseaudio.input.source-muted {
+    padding-left: 5px;
+    padding-right: 13px;
 }
 
 #pulseaudio:hover {
@@ -211,11 +235,11 @@ tooltip label {
 /* PowerOff */
 #custom-power {
     color: @peach;
-    padding-left: 8px;
+    padding-left: 10px;
     padding-right: 12px;
     margin-right: 12px;
     font-size: 16px;
-    border-radius: 0px 8px 8px 0px;
+    border-radius: 8px;
 }
 
 #custom-power:hover {
