--- a/Configs/.config/waybar/style.css
+++ b/Configs/.config/waybar/style.css
@@ -44,7 +44,8 @@
 
 /* Bar Styling */
 #waybar {
-    background-color: transparent;
+    background-color: @base;
+    /* background-color: transparent; */
     padding: 0px;
 }
 
@@ -61,10 +62,11 @@
 #battery,
 #pulseaudio,
 #custom-power {
+    /* border: 1px solid #000; */
     background-color: @base;
-    border-radius: 8px;
-    margin-top: 6px;
-    padding: 3px 3px;
+    /* border-radius: 8px; */
+    /* margin-top: 6px; */
+    padding: 0px 3px;
 }
 
 /* Custom logo */
@@ -72,7 +74,7 @@
     padding-right: 13px;
     padding-left: 11px;
     font-size: 20px;
-    margin-left: 12px;
+    /* margin-left: 12px; */
     color: @sapphire;
 }
 
@@ -89,7 +91,7 @@
     box-shadow: inset 0 -3px transparent;
     padding: 0 14px;
     border: none;
-    border-radius: 8px;
+    /* border-radius: 8px; */
     background-color: @base;
     color: @mauve;
 }
@@ -127,7 +129,7 @@
 }
 
 tooltip {
-    border-radius: 8px;
+    /* border-radius: 8px; */
     padding: 15px;
     background-color: @surface0;
 }
@@ -142,15 +144,15 @@ tooltip label {
 #tray {
     /* font-size: 20px; */
     margin-right: 5px;
-    padding: 0px 8px;
+    padding: 0px 4px;
     font-size: 16px;
 }
 
 /* PC Management */
 #cpu {
     color: @red;
-    border-radius: 8px 0px 0px 8px;
-    padding: 0px 8px 0px 9px;
+    /* border-radius: 8px 0px 0px 8px; */
+    padding: 0px 8px 0px 8px;
 }
 
 #cpu:hover {
@@ -159,7 +161,7 @@ tooltip label {
 
 #memory {
     color: @green;
-    border-radius: 0px 8px 8px 0px;
+    /* border-radius: 0px 8px 8px 0px; */
     padding: 0px 8px;
     margin-right: 5px;
 }
@@ -171,9 +173,10 @@ tooltip label {
 /* Network */
 #network {
     color: @yellow;
-    padding-right: 4px;
+    padding-left: 6px;
+    padding-right: 0px;
     font-size: 16px;
-    border-radius: 8px 0px 0px 8px;
+    /* border-radius: 8px 0px 0px 8px; */
 }
 
 #network:hover {
@@ -183,10 +186,10 @@ tooltip label {
 /* Bluetooth */
 #bluetooth {
     color: @blue;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 6px;
+    padding-right: 5px;
     font-size: 16px;
-    border-radius: 0px;
+    /* border-radius: 0px; */
 }
 
 #bluetooth:hover {
@@ -197,9 +200,9 @@ tooltip label {
 #battery {
     font-size: 16px;
     color: @yellow;
-    padding-left: 8px;
-    padding-right: 14px;
-    border-radius: 0px;
+    padding-left: 6px;
+    padding-right: 8px;
+    /* border-radius: 0px; */
 }
 
 #battery:hover {
@@ -209,24 +212,24 @@ tooltip label {
 /* Pulseaudio */
 #pulseaudio.output {
     color: @lavander;
-    font-size: 18px;
-    padding-left: 8px;
+    /* font-size: 18px; */
+    padding-left: 4px;
     padding-right: 12px;
-    border-radius: 0px;
+    /* border-radius: 0px; */
 }
 
-#pulseaudio.input {
-    color: @lavander;
-    font-size: 18px;
-    padding-left: 6px;
-    padding-right: 12px;
-    margin-right: 5px;
-    border-radius: 0px 8px 8px 0px;
-}
-#pulseaudio.input.source-muted {
-    padding-left: 5px;
-    padding-right: 13px;
-}
+/* #pulseaudio.input { */
+/*     color: @lavander; */
+/*     font-size: 18px; */
+/*     padding-left: 6px; */
+/*     padding-right: 12px; */
+/*     margin-right: 5px; */
+    /* border-radius: 0px 8px 8px 0px; */
+/* } */
+/* #pulseaudio.input.source-muted { */
+/*     padding-left: 5px; */
+/*     padding-right: 13px; */
+/* } */
 
 #pulseaudio:hover {
     background-color: @surface3;
@@ -237,9 +240,9 @@ tooltip label {
     color: @peach;
     padding-left: 10px;
     padding-right: 12px;
-    margin-right: 12px;
+    /* margin-right: 12px; */
     font-size: 16px;
-    border-radius: 8px;
+    /* border-radius: 8px; */
 }
 
 #custom-power:hover {
