feat: new zen brownser config

--- a/Configs/.zen/chrome/zen-themes/a6335949-4465-4b71-926c-4a52d34bc9c0/chrome.css
+++ b/Configs/.zen/chrome/zen-themes/a6335949-4465-4b71-926c-4a52d34bc9c0/chrome.css
@@ -29,8 +29,8 @@ findbar {
 	overflow: unset !important;
 	box-shadow: var(--box-shadow-10);
 
-	background: var(--toolbar-bgcolor) !important;
-	border: 1px solid var(--zen-main-browser-background-toolbar) !important;
+	background: var(--zen-primary-color) !important;
+	border: 1px solid var(--input-border-color) !important;
 
 	transition: transform 0.35s ease !important;
 
@@ -53,7 +53,7 @@ findbar {
 		}
 	}
 
-	&[hidden="true"] {
+	&[hidden] {
 		transform: translateX(var(--better-findbar-transform-translateX)) translateY(var(--better-findbar-transform-translateY));
 	}
 
@@ -91,14 +91,11 @@ body:has(
 
 /* Background blur */
 @media (-moz-bool-pref: "theme.better_find_bar.transparent_background") {
-	findbar, findbar .findbar-textbox:not([status="notfound"]) {
+	findbar,
+	findbar .findbar-textbox:not([status="notfound"]) {
 		backdrop-filter: blur(8px);
 
-		background: color-mix(in hsl, var(--zen-main-browser-background-toolbar), transparent 30%) !important;
-	}
-
-	findbar .findbar-textbox:not([status="notfound"]) {
-		background: color-mix(in hsl, var(--zen-main-browser-background-toolbar), transparent 10%) !important;
+		background: color-mix(in hsl, var(--zen-primary-color), transparent 10%) !important;
 	}
 }
 
