--- a/Configs/.config/waybar/colors.css
+++ b/Configs/.config/waybar/colors.css
@@ -1,12 +1,12 @@
-/* Tokyo Night */
+/* Catppuccin Mocha */
 
-@define-color background #1a1b26;
-@define-color background-alt #283457;
+@define-color background #1e1e2e;
+@define-color background-alt #394161;
 
-@define-color foreground #a9b1d6;
-@define-color foreground-alt #9aa5ce;
+@define-color foreground #cdd6f4;
+@define-color foreground-alt #bac2de;
 
-@define-color selected #c0caf5;
-@define-color icon #7dcfff;
+@define-color selected #cba6f7;
+@define-color icon #74c7ec;
 
-@define-color border #c0caf5;
+@define-color border #cba6f7;
